--- a/CC3K/Todo
+++ b/CC3K/Todo
@@ -6,5 +6,5 @@ July 18th
 - Enemy (Dwarf)
     - Movement
 - Item (Health potions)
-- Testing in main (interactions)
+- Testing in main (attackions)
 - Notify
